# digibyte-wallet

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DigiByte.slnx  Directory.Build.props  README.md  SECURITY.md  SELF_CUSTODY.md  docker-compose.mainnet.yml  docker-compose.testnet.yml  docker-compose.yml  railway.toml  test-nodeapi.ps1
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-sdk-dotnet.yml  publish-sdk-node.yml  publish-sdk-python.yml  release-woocommerce-plugin.yml  wallet-release-manifest.yml
docker/api/: Dockerfile
docker/digibyted/: Dockerfile  digibyte-mainnet.conf  digibyte-testnet.conf  digibyte.conf  entrypoint-mainnet.sh  entrypoint-testnet.sh  entrypoint.sh
docker/node-api/: Dockerfile
docker/pay-api/: Dockerfile
docker/pay-web/: Dockerfile
docker/web/: Dockerfile  nginx.conf
docs/: ARCHITECTURE.md  COMPLIANCE.md  PROCESS_FLOWS.md  ROADMAP.md  SECURITY.md  walletscrutiny-self-eval.md  walletscrutiny-submission.md
release-hashes/: README.md
samples/: README.md
samples/dotnet-store/: DigiPaySample.csproj  (+2 more)
scripts/: .gitattributes  build-woocommerce-zip.sh
sdk/: RELEASING.md
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: create_session.py  flask_webhook.py
sdk/python/src/digipay/: __init__.py  _http.py  client.py  errors.py  types.py  webhook.py
sdk/python/tests/: test_webhook.py
src/: src.sln
tools/: generate-release-manifest.py  inject-csp-hashes.py
(+360 files in other folders)
